fixed a small but with the perspective shift issues on IOS

--- a/public/menu.css
+++ b/public/menu.css
@@ -801,3 +801,6 @@ body{
 footer.hidden{
     display:none;
 }
+.drinkType .cats.hidden{
+    display:none
+}
